[build-system]
requires = ["scikit-build-core>=0.8.0", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "numstore"
version = "0.1.0"
description = "Python interface for the numerical database"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.source-dir = "../../.."
wheel.packages = ["numstore"]
cmake.args = [
    "-DENABLE_NDEBUG:BOOL=ON",
    "-DENABLE_NTEST:BOOL=ON",
    "-DENABLE_NLOG:BOOL=ON",
    "-DENABLE_GPROF:BOOL=OFF",
    "-DENABLE_PORTABLE:BOOL=OFF",
    "-DENABLE_STRIP:BOOL=ON",
    "-DENABLE_ASAN:BOOL=OFF",
    "-DBUILD_BINDINGS=ON"
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

[tool.setuptools.package-data]
numstore = ["_numstore.pyi", "py.typed"]
