[build-system]
requires = ["scikit-build-core>=0.8.0", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "numstore"
dynamic = ["version"]
description = "Python interface for the numerical database"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.source-dir = "../../.."
wheel.packages = ["numstore"]
cmake.args = [
    "-DENABLE_NDEBUG:BOOL=ON",
    "-DENABLE_NTEST:BOOL=ON",
    "-DENABLE_NLOG:BOOL=ON",
    "-DENABLE_GPROF:BOOL=OFF",
    "-DENABLE_PORTABLE:BOOL=ON",
    "-DENABLE_STRIP:BOOL=ON",
    "-DENABLE_ASAN:BOOL=OFF",
    "-DENABLE_LEAK_TOOL:BOOL=OFF",
    "-DBUILD_TOOLS:BOOL=OFF",
    "-DBUILD_PYTHON_BINDINGS:BOOL=ON",
    "-DBUILD_NUMSTORE_SAMPLES:BOOL=OFF",
    "-DBUILD_SMARTFILE_SAMPLES:BOOL=OFF"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../../version.txt"
regex = '(?P<value>[0-9.]+)'

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
test-requires = ["pytest", "pytest-subtests"]
test-command = "pytest {project}/bindings/python/numstore/tests"
